--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -1,6 +1,7 @@
 [template]
 cargo_generate_version = ">=0.9.0"
-exclude = [".github/workflows/ci.yml"]
+exclude = [".github/workflows/ci.yml", "Readme.org"]
+ignore = ["Readme.org"]
 
 [placeholders.license]
 type = "string"
