--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,12 @@ name: Check Template
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
     branches: [ 'main' ]
     paths-ignore:
       - "Readme.org"
+      - "LICENSE*"
 
 env:
   CARGO_GEN_VERSION: "0.22.0"
