--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -1,7 +1,9 @@
 [template]
 cargo_generate_version = ">=0.9.0"
-exclude = [".github/workflows/ci.yml", "Readme.org"]
-ignore = ["Readme.org"]
+ignore = [".github/workflows/ci.yml", "Readme.org"]
+
+[hooks]
+post = ["post-script.rhai"]
 
 [placeholders.license]
 type = "string"
@@ -21,15 +23,18 @@ prompt = "Enter the name of your Zed extension"
 type = "string"
 prompt = "Enter a unique identifier for your plugin (e.g., 'my-awesome-plugin')"
 
+[placeholders.plugin_type]
+type = "string"
+prompt = "What type of Zed plugin are you creating?"
+choices = ["Language Server", "Theme", "Slash Command"]
+
 [placeholders.deploy_release]
 type = "bool"
 prompt = "Would you like to set up GitHub releases for this plugin?"
 default = true
 
-[placeholders.plugin_type]
-type = "string"
-prompt = "What type of Zed plugin are you creating?"
-choices = ["Language Server", "Theme", "Slash Command"]
+[conditional.'!deploy_release']
+ignore = [".github/workflows/release.yml", "cliff.toml", "release.toml"]
 
 # Language Server Plugin
 [conditional.'plugin_type == "Language Server"'.placeholders]
